// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Job component renders a .Job by default 1`] = `
<div
  className="Jobitem"
>
  <h2
    className="Job__title"
  >
    <Link
      replace={false}
      to="/job/undefined"
    />
  </h2>
  <button
    className="Job__delete"
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="trash-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
     
    remove
  </button>
  <div
    className="Job__dates"
  >
    <div
      className="Job__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        Invalid Date
      </span>
    </div>
  </div>
</div>
`;

exports[`Job component renders the Job given props 1`] = `
<div
  className="Job"
>
  <h2
    className="Job__title"
  >
    <Link
      replace={false}
      to="/job/a"
    >
      test-class-name
    </Link>
  </h2>
  <button
    className="Job__delete"
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="trash-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
     
    remove
  </button>
  <div
    className="Job__dates"
  >
    <div
      className="Job__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        15th Jan 2019
      </span>
    </div>
  </div>
</div>
`;
